Move Link into Synesis module